Changed header background color.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4015,7 +4015,7 @@ body:not(.home) .nav-up {
  */
 .header {
   position: relative;
-  background: #111;
+  background: #9eabd5;
 }
 
 .site-title,
